manifests-failed/autocert-1.19.3.tgz-manifest.yaml
---
# Source: autocert/charts/step-certificates/templates/configmaps.yaml
---
# Source: autocert/charts/step-certificates/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-step-certificates
  namespace: autocert-1.19.3.tgz
  labels:
    helm.sh/chart: step-certificates-1.25.0
    app.kubernetes.io/name: step-certificates
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.25.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 9000
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: step-certificates
    app.kubernetes.io/instance: my-release
---
# Source: autocert/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-autocert
  labels:
    helm.sh/chart: autocert-1.19.3
    app.kubernetes.io/name: autocert
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.19.3"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 4443
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: autocert
    app.kubernetes.io/instance: my-release
---
# Source: autocert/templates/autocert.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-autocert
  labels:
    helm.sh/chart: autocert-1.19.3
    app.kubernetes.io/name: autocert
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.19.3"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: autocert
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      labels:
        app.kubernetes.io/name: autocert
        app.kubernetes.io/instance: my-release
    spec:
      containers:
      - name: autocert
        image: "cr.step.sm/smallstep/autocert-controller:0.19.3"
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 20Mi
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 1000
        volumeMounts:
        - name: config
          mountPath: /home/step/config
          readOnly: true
        - name: certs
          mountPath: /home/step/certs
          readOnly: true
        - name: autocert-password
          mountPath: /home/step/password
          readOnly: true
        - name: autocert-config
          mountPath: /home/step/autocert
          readOnly: true
        livenessProbe:
          initialDelaySeconds: 5
          httpGet:
            path: /healthz
            port: 4443
            scheme: HTTPS
        readinessProbe:
          initialDelaySeconds: 5
          httpGet:
            path: /healthz
            port: 4443
            scheme: HTTPS
      volumes:
      - name: config
        configMap:
          name: my-release-step-certificates-config
      - name: certs
        configMap:
          name: my-release-step-certificates-certs
      - name: autocert-password
        secret:
          secretName: my-release-step-certificates-provisioner-password
      - name: autocert-config
        configMap:
          name: my-release-autocert-config
      securityContext:
        {}
---
# Source: autocert/charts/step-certificates/templates/ca.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-release-step-certificates
  namespace: autocert-1.19.3.tgz
  labels:
    helm.sh/chart: step-certificates-1.25.0
    app.kubernetes.io/name: step-certificates
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.25.0"
    app.kubernetes.io/managed-by: Helm
spec:
  # Only one replica is supported at this moment
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: step-certificates
      app.kubernetes.io/instance: my-release
  serviceName: my-release-step-certificates
  template:
    metadata:
      labels:
        app.kubernetes.io/name: step-certificates
        app.kubernetes.io/instance: my-release
    spec:
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: step-certificates
          image: "cr.step.sm/smallstep/step-ca:0.25.0"
          imagePullPolicy: IfNotPresent
          command: [
            "/usr/local/bin/step-ca",
            "--password-file", "/home/step/secrets/passwords/password",
            "/home/step/config/ca.json"
          ]
          ports:
            - name: https
              containerPort: 9000
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 5
            httpGet:
              path: /health
              port: 9000
              scheme: HTTPS
          readinessProbe:
            initialDelaySeconds: 5
            httpGet:
              path: /health
              port: 9000
              scheme: HTTPS
          resources:
            {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
              - NET_BIND_SERVICE
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
          volumeMounts:
          - name: certs
            mountPath: /home/step/certs
            readOnly: true
          - name: config
            mountPath: /home/step/config
            readOnly: true
          - name: secrets
            mountPath: /home/step/secrets
            readOnly: true
          - name: ca-password
            mountPath: /home/step/secrets/passwords
            readOnly: true
          - name: database
            mountPath: /home/step/db
            readOnly: false
      volumes:
      - name: certs
        configMap:
          name: my-release-step-certificates-certs
      - name: config
        configMap:
          name: my-release-step-certificates-config
      - name: secrets
        configMap:
          name: my-release-step-certificates-secrets
      - name: ca-password
        secret:
          secretName: my-release-step-certificates-ca-password
  volumeClaimTemplates:
  - metadata:
      name: database
      labels:
        app.kubernetes.io/name: step-certificates
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
    spec:
      accessModes:
        - "ReadWriteOnce"
      resources:
        requests:
          storage: "10Gi"
---
# Source: autocert/charts/step-certificates/templates/secrets.yaml
---
---
# Source: autocert/charts/step-certificates/templates/secrets.yaml
---
---
# Source: autocert/templates/configmaps.yaml
# Allow configuration of autocert without installing step-certificates.
---
# Source: autocert/templates/secrets.yaml
# Allow configuration of autocert without installing step-certificates.
---
# Source: autocert/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: my-release-autocert-webhook-config
  labels:
    helm.sh/chart: autocert-1.19.3
    app.kubernetes.io/name: autocert
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.19.3"
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: autocert.step.sm
    clientConfig:
      service:
        name: my-release-autocert
        namespace: autocert-1.19.3.tgz
        path: "/mutate"
    sideEffects: None
    admissionReviewVersions: ["v1beta1"]
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    failurePolicy: Ignore
    namespaceSelector:
      matchLabels:
        autocert.step.sm: enabled
---
# Source: autocert/charts/step-certificates/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "my-release-step-certificates-test-connection"
  namespace: autocert-1.19.3.tgz
  labels:
    helm.sh/chart: step-certificates-1.25.0
    app.kubernetes.io/name: step-certificates
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "0.25.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: curl
      image: alpine/curl
      command:
        - 'curl'
      args:
        - '-s'
        - '-k'
        - 'https://my-release-step-certificates:443/health'
  restartPolicy: Never
---
# Source: autocert/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "my-release-autocert-test-connection"
  labels:
    app.kubernetes.io/name: autocert
    helm.sh/chart: autocert-1.19.3
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args:  ['my-release-autocert:443']
  restartPolicy: Never
